--- a/SimpleBlog/Web.config
+++ b/SimpleBlog/Web.config
@@ -13,6 +13,18 @@
   </appSettings>
 
   <system.web>
+
+    <authentication mode="Forms">
+        <forms loginUrl="~/login" />
+    </authentication>
+
+    <roleManager enabled="true" defaultProvider="SimpleBlogRoleProvider">
+        <providers>
+            <clear />
+            <add name="SimpleBlogRoleProvider" type="SimpleBlog.Infrastructure.RoleProvider" />
+        </providers>
+    </roleManager>
+
     <compilation debug="true" targetFramework="4.5.2"/>
     <httpRuntime targetFramework="4.5.2"/>
   </system.web>
