Added database connection

--- a/SimpleBlog/Web.config
+++ b/SimpleBlog/Web.config
@@ -5,6 +5,10 @@
   -->
 <configuration>
 
+    <connectionStrings>
+        <add name="MainDB" connectionString="Server=localhost;database=simpleblog;user Id=root;Password=floyds1"/>
+    </connectionStrings>
+    
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
